# telegram-bot

./: .env.example  .gitignore  INSTALLATION.md  README.md  SERVER.md  app.py  basenotes.py  bot.py  config.py  memory.py  pyproject.toml
agents/: __init__.py  researcher.py
providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
tests/: __init__.py  test_config.py  test_memory.py  test_providers.py
tools/: __init__.py  fetch_page.py  http_utils.py  web_search.py
